# XBS

./: CODE.md  Makefile  cx  flake.nix  xbs  xbs.c
debian/: changelog  control  examples  install  manpages  rules
xbs-hs/: Braille.hs  ParseXBS.hs  README.md  XBS.hs  default.nix  xbs-hs.cabal
xbs-hs/app/: Main.hs
xbs-hs/app/live/: Main.hs  Tui.hs  Types.hs
xbs-hs/test/: Spec.hs
xbs-js/: deno.json  xbs.js
xbsjs/: README.md  conv_xbs.py  xbs.js
