cabal-version:       2.2
name:                xbs-hs
version:             0.1.0.0
synopsis:            Ball-and-stick molecular viewer rendered as SVG via d3x
description:         A Haskell port of the XBS ball-and-stick viewer. Builds on
                     d3x for D3-style scales and SVG path primitives, emitting
                     diagrams through IHP's HSX quasiquoter. Sibling to the
                     original C implementation (xbs-c) and the browser spec
                     (xbs-js).
license:             MIT
author:              Comhlan Ltd.
build-type:          Simple

common common-extensions
    default-extensions:
        OverloadedStrings
        , QuasiQuotes
        , RecordWildCards
        , ScopedTypeVariables
        , BangPatterns
        , FlexibleInstances
        , FlexibleContexts
        , OverloadedRecordDot
        , OverloadedLabels
        , DuplicateRecordFields
        , NoFieldSelectors

common common-flags
    ghc-options:
        -Wall
        -Wredundant-constraints
        -Wunused-imports
        -Wno-type-defaults
        -Wno-missing-signatures
        -fstatic-argument-transformation
        -funbox-strict-fields

library
    import: common-extensions, common-flags
    default-language: GHC2021
    hs-source-dirs: .
    exposed-modules:
        XBS
        , ParseXBS
    build-depends:
          base >= 4.17.0 && < 4.22
        , text
        , containers
        , linear
        , vector
        , vector-algorithms
        , lens
        , ihp-hsx
        , d3x
        , uu-parsinglib

-- xbs-render: load each .bs file and write an .svg next to it.
--   nix run .#xbs-render -- examples/ch4.bs      (once exposed in the flake)
--   cabal run xbs-render -- examples/ch4.bs      (inside nix develop)
executable xbs-render
    import: common-extensions, common-flags
    default-language: GHC2021
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
          base >= 4.17.0 && < 4.22
        , xbs-hs
        , d3x
        , ihp-hsx
        , vector
        , text
        , filepath

-- xbs-live: interactive viewer. Serves the rendered SVG over SSE on :9090 and
--   drives the view (rotate/perspective/line/reset) from the terminal via vty,
--   with a delimited-continuation (oleg-delimcc) input loop. Config is the loop
--   accumulator; the only shared cell is the latest-SVG TVar the SSE handler reads.
--   cabal run xbs-live -- ../examples/ring.bs   (inside nix develop)
executable xbs-live
    import: common-extensions, common-flags
    default-language: GHC2021
    hs-source-dirs: app/live
    main-is: Main.hs
    -- warp + the forked SSE server need the threaded RTS
    ghc-options: -threaded -rtsopts
    build-depends:
          base >= 4.17.0 && < 4.22
        , xbs-hs
        , oleg-delimcc
        , vty
        , vty-crossplatform
        , warp
        , wai
        , http-types
        , stm
        , text
        , bytestring
        , vector

-- Parser tests (hspec), grown modularly as ParseXBS gains formats.
--   cabal test            (inside nix develop)
test-suite xbs-test
    import: common-extensions, common-flags
    default-language: GHC2021
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
          base >= 4.17.0 && < 4.22
        , xbs-hs
        , hspec
        , containers
        , text
        , linear
